# server/app/controller/User.go
@@ -5,6 +5,7 @@ import (
 	"fiber-vue/app/services/user"
 	"fiber-vue/app/utils/response"
 	"github.com/gofiber/fiber/v2"
+	"github.com/gofiber/fiber/v2/log"
 )
 
 type UserReq struct {
@@ -29,33 +30,29 @@ type UserLoginReq struct {
 	Password string `json:"password"`
 }
 
-// BadRequestErrorResponse 定义一个通用的请求错误响应结构体
-// swagger:model BadRequestErrorResponse
-type BadRequestErrorResponse struct {
-	// 错误信息
-	Error string `json:"error"`
-	// 具体错误详情（可选）
-	Details map[string]interface{} `json:"details,omitempty"`
-}
-
-// InternalServerErrorResponse 定义一个通用的服务器内部错误响应结构体
-// swagger:model InternalServerErrorResponse
-type InternalServerErrorResponse struct {
-	// 错误信息
-	Error string `json:"error"`
-	// 具体错误详情（可选）
-	Details map[string]interface{} `json:"details,omitempty"`
-}
-
 // GetUser @Summary 获取用户
-//
 // @Produce json
 // @Success 200 {object} string "成功"
 // @Failure 400 {object} string "请求错误"
 // @Failure 500 {object} string "内部错误"
 // @Router /user [get]
+// @schemes http
+// @Security JWTAuthToken
+// @SecurityDefinitions.JWTAuthToken
+// @in header
+// @name Authorization
 func GetUser(ctx *fiber.Ctx) error {
-	return ctx.JSON(user.GetAllUsers())
+	// 获取当前用户
+	u := ctx.Locals("user")
+	log.Info(u)
+
+	result, err := user.GetAllUsers()
+
+	if err != nil {
+		return response.FailWithDetailed(nil, err.Error(), ctx)
+	}
+
+	return response.OkWithData(result, ctx)
 }
 
 // CreateUser 创建用户
@@ -66,8 +63,6 @@ func GetUser(ctx *fiber.Ctx) error {
 // @Produce json
 // @Param user body UserReq true "用户信息"
 // @Success 200 {object} model.User "成功创建用户并返回新创建的用户信息"
-// @Failure 400 {object} BadRequestErrorResponse "请求错误，例如缺少必填字段或格式不正确"
-// @Failure 500 {object} InternalServerErrorResponse "服务器内部错误"
 // @Router /user [post]
 func CreateUser(ctx *fiber.Ctx) error {
 	var userReq UserReq
@@ -75,12 +70,17 @@ func CreateUser(ctx *fiber.Ctx) error {
 		return err
 	}
 
-	// BadRequestErrorResponse
 	if userReq.Username == "" || userReq.Password == "" {
 		return response.FailWithDetailed(nil, "用户名或密码不能为空", ctx)
 	}
 
-	return response.OkWithData(user.CreateUser(userReq.Username, userReq.Password), ctx)
+	result, err := user.CreateUser(userReq.Username, userReq.Password)
+
+	if err != nil {
+		return response.FailWithDetailed(nil, err.Error(), ctx)
+	}
+
+	return response.OkWithData(result, ctx)
 }
 
 // UserLogin 登录
@@ -90,8 +90,6 @@ func CreateUser(ctx *fiber.Ctx) error {
 // @Produce json
 // @Param user body UserLoginReq true "用户信息"
 // @Success 200 {object} model.User "成功创建用户并返回新创建的用户信息"
-// @Failure 400 {object} BadRequestErrorResponse "请求错误，例如缺少必填字段或格式不正确"
-// @Failure 500 {object} InternalServerErrorResponse "服务器内部错误"
 // @Router /login [post]
 func UserLogin(ctx *fiber.Ctx) error {
 	var userReq UserLoginReq
@@ -99,11 +97,16 @@ func UserLogin(ctx *fiber.Ctx) error {
 		return err
 	}
 
-	// BadRequestErrorResponse
 	if userReq.Username == "" || userReq.Password == "" {
 		return response.FailWithDetailed(nil, "用户名或密码不能为空", ctx)
 	}
 
-	return response.OkWithData(auth.UserLogin(userReq.Username, userReq.Password), ctx)
+	userMap, err := auth.UserLogin(userReq.Username, userReq.Password)
+
+	if err != nil {
+		return response.FailWithDetailed(nil, err.Error(), ctx)
+	}
+
+	return response.OkWithData(userMap, ctx)
 
 }
